--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -15,7 +15,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://quellanan.github.io
 root: /
-permalink: :year/:month/:day/:title.html
+permalink: :year:month:day/:title.html
 permalink_defaults:
 
 # Directory
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: nexT
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -132,7 +132,7 @@ live2d:
   tagMode: false
   debug: false
   model:
-    use: live2d-widget-model-koharu
+    use: live2d-widget-model-tororo
   display:
     position: left
     width: 250
