--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -134,7 +134,7 @@ live2d:
   model:
     use: live2d-widget-model-tororo
   display:
-    position: left
+    position: right
     width: 250
     height: 500
   mobile:
