--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 #url: https://quellanan.github.io
-url: http://49.235.80.51
+url: http://quellanan.xyz
 root: /
 permalink: :year:month:day/:title.html
 permalink_defaults:
