--- a/blog/themes/next/_config.yml
+++ b/blog/themes/next/_config.yml
@@ -756,7 +756,7 @@ needmoreshare2:
 # ---------------------------------------------------------------
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: 34325eeadca4daa53a3ae649c0c5eb20
 
 # Growingio Analytics ID
 # Copyright 2015-2018 GrowingIO, Inc. More info available at https://www.growingio.com
